--- a/seminarski/index.html
+++ b/seminarski/index.html
@@ -44,6 +44,9 @@
               <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#ponude">Ponude</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
@@ -76,34 +79,14 @@
 
   <!-- Features -->
 
-  <section class="white-section" id="features">
+  <section class="white-section" id="sec">
+    <h2 id="ponude">Ponude</h2>
+    <div class="container-fluid" id="parent">
+      <div class="row" id="row">
 
-    <div class="container-fluid">
-
-      <div class="row">
-        <div class="feature-box col-lg-4">
-          <i class="icon fas fa-check-circle fa-4x"></i>
-          <h3 class="feature-title">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
-        </div>
-
-        <div class="feature-box col-lg-4">
-          <i class="icon fas fa-bullseye fa-4x"></i>
-          <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-
-        <div class="feature-box col-lg-4">
-          <i class="icon fas fa-heart fa-4x"></i>
-          <h3 class="feature-title">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
-        </div>
       </div>
-
-
     </div>
   </section>
-
 
   <!-- Testimonials -->
 
@@ -232,7 +215,7 @@
     </div>
   </footer>
 
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
