--- a/seminarski/index.html
+++ b/seminarski/index.html
@@ -189,7 +189,15 @@
 
   </section>
 
-
+  <section>
+    <div>
+      <form action="https://ptf-web-dizajn-2022.azurewebsites.net/api/Food" id="forma">
+        <input type="text" placeholder="Name" id="name">
+        <input type="number" placeholder="Price" id="price">
+        <input type="submit" placeholder="Submit">
+      </form>
+    </div>
+  </section>
   <!-- Call to Action -->
 
   <section class="colored-section" id="cta">
