--- a/seminarski/index.html
+++ b/seminarski/index.html
@@ -83,7 +83,7 @@
     <h2 id="offers">Our offers</h2>
     <div class="container-fluid" id="parent">
       <div class="row" id="row">
-
+        
       </div>
     </div>
   </section>
@@ -141,6 +141,35 @@
       <p>© Copyright 2018 TinDog</p>
     </div>
   </footer>
+  
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="recipient-name" class="col-form-label">Name:</label>
+              <input type="text" class="form-control" id="recipient-name">
+            </div>
+            <div class="form-group">
+              <label for="message-text" class="col-form-label">Price:</label>
+              <input type="number" class="form-control" id="price-text"></input>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <script src="js/main.js"></script>
 </body>
