--- a/seminarski/index.html
+++ b/seminarski/index.html
@@ -154,8 +154,16 @@
         <div class="modal-body">
           <form>
             <div class="form-group">
+              <label for="foodId" class="col-form-label">ID:</label>
+              <input type="text" class="form-control" id="foodID" disabled>
+            </div>
+            <div class="form-group">
               <label for="recipient-name" class="col-form-label">Name:</label>
               <input type="text" class="form-control" id="recipient-name">
+            </div>
+            <div class="form-group">
+              <label for="foodImg" class="col-form-label">Image:</label>
+              <input type="text" class="form-control" id="foodImg">
             </div>
             <div class="form-group">
               <label for="message-text" class="col-form-label">Price:</label>
@@ -165,7 +173,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Send message</button>
+          <button type="button" class="btn btn-primary" onclick="updateFood()">Send message</button>
         </div>
       </div>
     </div>
