--- a/seminarski/index.html
+++ b/seminarski/index.html
@@ -88,14 +88,14 @@
 
 <!--Forma-->
 
-  <section>
+  <section class="submit-section">
     <div class="first-form" id="submit-food">
-      <h2 class="form-heading">Do you want to submit more food?</h2>
+      <h2 class="form-heading">Submit more food</h2>
       <form action="https://ptf-web-dizajn-2022.azurewebsites.net/api/Food" id="forma"> 
         <input type="text" placeholder="Name" id="name" class="col-6 forma"> <br>
         <input type="number" placeholder="Price" id="price" class="col-6 forma"> <br>
-        <input type="text" placeholder="Image" id="imageUrl" class="col-6 forma"> <br>
-        <input type="submit" placeholder="Submit" class="btn btn-lg btn-light">
+        <input type="text" placeholder="Image" id="imageUrl" class="col-6 forma zadnji"> <br>
+        <input type="submit" placeholder="Submit" class="btn btn-lg btn-mybg">
       </form>
     </div>
   </section>
